# ByO-Target-Platform-Hackathon

./: .env.example  .env.example_ec2  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  k8s-secrets.env
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  001_initial_schema.py  002_add_search_cache_and_history.py  003_add_document_metadata_fields.py  004_convert_sessions_to_workspace.py  005_add_analysis_goal.py  006_add_section_split_confidence.py
backend/app/: __init__.py  main.py
backend/app/agents/: NEW_AGENT_GUIDE.md  README.md  __init__.py  base_agent.py
backend/app/agents/analysis_agent/: __init__.py  agent.py  analysis_agent_content.md  prompt.py  schemas.py
backend/app/agents/embedding_agent/: __init__.py  agent.py  embedding_agent_content.md  prompt.py  schemas.py
backend/app/agents/general_chat/: __init__.py  agent.py  general_chat_content.md  prompt.py  schemas.py
backend/app/agents/report_agent/: __init__.py  agent.py  data_normalizer.py  document_processor.py  llm_integration.py  prompt.py  report_agent_content.md  report_builder.py  schemas.py  tools.py  visualizer.py
backend/app/agents/search_agent/: __init__.py  advanced_filter.py  agent.py  arxiv_search.py  pdf_download.py  prompt.py  schemas.py  search_agent_content.md
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  auth.py  documents.py  sessions.py
backend/app/api/v1/agents/: __init__.py  analysis.py  embedding.py  general.py  report.py  search.py
backend/app/config/: __init__.py  settings.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/middleware/: auth.py
backend/app/schemas/: chat.py  document.py  session.py  user.py
backend/app/services/: __init__.py  chat_service.py  document_service.py  embedding_service.py  llm_service.py  report_service.py  session_service.py  user_service.py
backend/app/tools/: __init__.py
backend/app/tools/reasoning/: __init__.py  react_quality_gate.py
backend/app/utils/: __init__.py  security.py  tokenizer.py
frontend/: .env.example  Dockerfile  README.md  check_api.md  package-lock.json  package.json  tailwind.config.js
(+60 files in other folders)
