[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tva-backend"
version = "0.1.0"
description = "TVA (Target Validation Assistant) - AI-powered academic research analysis platform backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "TVA Team"}
]
license = {text = "MIT"}

[tool.hatch.build.targets.wheel]
packages = ["app"]

dependencies = [
    # Web Framework
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    
    # Database
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "psycopg[binary]==3.1.14",
    
    # Vector DB
    "chromadb==0.4.18",
    
    # LLM & Embedding
    "upstage==0.2.0",
    "openai==1.3.0",
    
    # API Clients
    "httpx==0.25.2",
    "aiohttp==3.9.1",
    "requests==2.31.0",
    
    # PDF Processing
    "pypdf==4.0.1",
    "pdfplumber==0.10.3",
    
    # Text Processing
    "python-docx==0.8.11",
    
    # Utilities
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "uuid6==1.0.3",
    
    # Async
    "asyncio-contextmanager==1.0.0",
    
    # Logging
    "python-json-logger==2.0.7",
    
    # Caching
    "redis==5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "pytest-cov==4.1.0",
    "black==23.12.1",
    "ruff==0.1.11",
    "mypy==1.7.1",
    "httpx[cli]==0.25.2",
]

[tool.uv]
# UV configuration

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
